WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115651
[Win] Fix storage leak in Windows DumpRenderTree
https://bugs.webkit.org/show_bug.cgi?id=115651
Summary
[Win] Fix storage leak in Windows DumpRenderTree
Darin Adler
Reported
2013-05-06 09:26:23 PDT
[Win] Fix storage leak in Windows DumpRenderTree
Attachments
Patch
(1.47 KB, patch)
2013-05-06 09:26 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2013-05-06 09:26:58 PDT
Created
attachment 200706
[details]
Patch
Darin Adler
Comment 2
2013-05-06 09:27:32 PDT
Found by code inspection.
WebKit Commit Bot
Comment 3
2013-05-07 18:25:47 PDT
Comment on
attachment 200706
[details]
Patch Clearing flags on attachment: 200706 Committed
r149703
: <
http://trac.webkit.org/changeset/149703
>
WebKit Commit Bot
Comment 4
2013-05-07 18:25:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug