[Win] Fix storage leak in Windows DumpRenderTree https://bugs.webkit.org/show_bug.cgi?id=115651

Reviewed by Sam Weinig.

* DumpRenderTree/win/DumpRenderTree.cpp:
(lastPathComponent): Added a missing call to adoptCF.


Canonical link: https://commits.webkit.org/134164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149703 268f45cc-cd09-0410-ab3c-d52691b4dbfc